<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="Fragments.ForgotPasswordFragment"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_description"
        android:textAlignment="center"
        android:layout_margin="5dp"/>

    <EditText
        style="@style/EditTexStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/email_text"
        android:textAlignment="center"
        android:layout_margin="10sp"
        android:inputType="textEmailAddress"
        android:id = "@+id/ForgotPasswordEmailEditText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_step_string"
        android:background="@drawable/custom_button"
        android:layout_gravity="center"
        android:padding="10sp"
        android:id = "@+id/ForgotPasswordNextStepButton"/>

</LinearLayout>
